--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <script>
         let time = document.getElementById('time');
         let date = document.getElementById('date');
-        let whether = document.getElementById('whether');
+        let weather = document.getElementById('weather');
         let wind = document.getElementById('wind');
         const currentDate = new Date();
         const day = currentDate.getDate();
